--- a/stories.html
+++ b/stories.html
@@ -94,7 +94,7 @@
 							<li><a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
 							<li><a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
 							<li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
-							<li><a href="#"><i class="icon fa-github">&nbsp;</i>Github</a></li>
+							<li><a href="https://github.com/scotts3l33t/anticancel.git"><i class="icon fa-github">&nbsp;</i>Github</a></li>
 						</ul>
 					</section>
 				</div>
