uniting the headers and footer and menu code

--- a/faq.html
+++ b/faq.html
@@ -12,25 +12,22 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<script>
+			$(function(){
+  				$("#header").load("header.html"); 
+  				$("#footer").load("footer.html");
+				$("#menu").load("menu.html");
+			});
+		</script>
 	</head>
 	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
-				<a class="logo" href="index.html">Anti-Cancel</a>
-				<nav>
-					<a href="#menu">Menu</a>
-				</nav>
 			</header>
 
 		<!-- Nav -->
 			<nav id="menu">
-				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="text.html">The Text</a></li>
-					<li><a href="stories.html">The Stories</a></li>
-					<li><a href="faq.html">FAQ</a></li>
-				</ul>
 			</nav>
 
 		<!-- Heading -->
@@ -70,36 +67,6 @@
 
 		<!-- Footer -->
 		<footer id="footer">
-			<div class="inner">
-				<div class="content">
-					<section>
-						<h3>Thank you for your visit and consideration</h3>
-						<p>We hope that you agree with our work on this, but if you don't, you can tell us how we can improve
-							it. We look forward to engaging with you, and hope you have a good day.</p>
-					</section>
-					<section>
-						<h4>Links</h4>
-						<ul class="alt">
-							<li><a href="#">Go back to the top.</a></li>
-							<li><a href="#">Read and understand the text.</a></li>
-							<li><a href="#">Hear the Stories of real people.</a></li>
-						</ul>
-					</section>
-					<section>
-						<h4>Get Involved</h4>
-						<ul class="plain">
-							<li><a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
-							<li><a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
-							<li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
-							<li><a href="https://github.com/scotts3l33t/anticancel.git"><i class="icon fa-github">&nbsp;</i>Github</a></li>
-						</ul>
-					</section>
-				</div>
-				<div class="copyright">
-					&copy; Heathen Software. Photos <a href="https://unsplash.co">Unsplash</a>, Video <a
-						href="https://coverr.co">Coverr</a>.
-				</div>
-			</div>
 		</footer>
 
 		<!-- Scripts -->
