--- a/stories.html
+++ b/stories.html
@@ -104,17 +104,19 @@
 					<section>
 						<h4>Links</h4>
 						<ul class="alt">
-							<li><a href="#">Go back to the top.</a></li>
-							<li><a href="#">Read and understand the text.</a></li>
-							<li><a href="#">Hear the Stories of real people.</a></li>
+							<li><a href="index.html">Go back to the top.</a></li>
+							<li><a href="text.html">Read and understand the text.</a></li>
+							<li><a href="stories.html">Hear the Stories of real people.</a></li>
+							<li><a href="faq.html">Frequently Asked Questions</a></li>
 						</ul>
 					</section>
 					<section>
 						<h4>Get Involved</h4>
 						<ul class="plain">
 							<li><a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
-							<li><a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
-							<li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
+							<li><a href="https://www.facebook.com/The-Anti-Cancel-movement-106122057847392"><i
+								 class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
+							<!-- <li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li> -->
 							<li><a href="https://github.com/scotts3l33t/anticancel.git"><i
 										class="icon fa-github">&nbsp;</i>Github</a></li>
 						</ul>
