--- a/stories.html
+++ b/stories.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>The Text of the Legislation</title>
+		<title>Stories of why we should do this</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
